[gd_scene load_steps=4 format=3 uid="uid://bgrmwgjf2vuc8"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_jm8bt"]
[ext_resource type="Texture2D" uid="uid://b07avsqptu20f" path="res://assets/laser.png" id="1_rqg0g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k4qu6"]
radius = 2.0
height = 28.0

[node name="Bullet" type="Area2D"]
script = ExtResource("1_jm8bt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_rqg0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k4qu6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
